1998-03-31  Ulrich Drepper  <drepper@cygnus.com>

	* iconvdata/Makefile: Use libKSC shared object in JOHAB and
	EUC-KR.

	* sysdeps/unix/sysv/linux/bits/socket.h (PF_FILE): Correct
	comment.

1998-03-30 08:43  H.J. Lu  <hjl@gnu.org>

	* sysdeps/alpha/elf/start.S: Let __libc_start_main do most of
	the init stuff.

1998-03-31  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Wrapper for
	adjtimex syscall.
	* sysdeps/unix/sysv/linux/alpha/Makefile (sysdep_routines): Add
	adjtimex.
	Patches by Dominik Kubla <kubla@sundiver.zdv.uni-mainz.de>.

1998-03-31  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* Makerules (install): Change comment for libc.so following the
	libc_nonshared changes.

1998-03-31  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/generic/dl-sysdep.c (_dl_important_hwcaps): Fix typo.

	* iconvdata/gap.pl: Avoid using %#06x.

1998-03-31 19:55  Zack Weinberg  <zack@rabi.phys.columbia.edu>

	* Makerules: Use $? instead of S^ when invoking ar.

1998-03-31  Ulrich Drepper  <drepper@cygnus.com>

	* db2/compat.h: Allow EFTYPE being defined.
	* sysdeps/unix/bsd/bits/signum.h: Add definition for SIG_HOLD.
	* sysdeps/unix/bsd/ulimit.c: Include <ulimit.h>.
	* sysdeps/mach/hurd/bits/fcntl.h: Add O_LARGEFILE.
	* sysdeps/mach/bits/libc-lock.h: Fix typo.
	(__libc_once): Correctly unlock semaphore.
	* sysdeps/mach/hurd/dl-sysdep.c: Include <elf/ldsodefs.h>.
	* sysdeps/unix/bsd/getpt.c: Fix typo.
	Patches by UCHIYAMA Yasushi <uch@ddd.scei.sony.co.jp>.

1998-03-31  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/bits/socket.h (MSG_*): Also define as
	macros.

1998-03-31 18:11  Ulrich Drepper  <drepper@cygnus.com>

	* include/mntent.h: New file.

	* elf/Makefile (trusted-dirs.h): Append slash to filename.
	* elf/dl-load.c: Rewrite search path handling.
	* elf/ldsodefs.h (struct r_search_path_elem): Change for rewrite.
	* elf/rtld.c (process_envvars): Recognize LD_HWCAP_MASK.