@@ -1,3 +1,10 @@
+Wed Apr  1 10:50:23 1998  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>
+
+	* sysdeps/unix/sysv/linux/m68k/dl-librecon.h: New file.
+
+	* sysdeps/unix/sysv/linux/m68k/Makefile [$(subdir)=elf]: Build and
+	install lddlibc4.
+
 1998-03-31  Ulrich Drepper  <drepper@cygnus.com>
 
 	* iconvdata/Makefile: Use libKSC shared object in JOHAB and
